--- a/hue/templates/hue/emergency.html
+++ b/hue/templates/hue/emergency.html
@@ -24,11 +24,6 @@ var map = new naver.maps.Map('map', mapOptions);
 var markers = [],
     infoWindows = [];
 var cnt = 0;
-var bounds = map.getBounds(),
-    southWest = bounds.getSW(),
-    northEast = bounds.getNE(),
-    lngSpan = northEast.lng() - southWest.lng(),
-    latSpan = northEast.lat() - southWest.lat();
 
 for (var key in finalArray) {
     cnt++;
@@ -53,28 +48,39 @@ for (var key in finalArray) {
 
 
 function changePos(arr){
-  for(var i =0; i<markers.length; i++){
-   if(markers[i].title == 'I2'){
-     console.log(markers[i]);
-     console.log(markers[i].title);
-     var newPos = new naver.maps.LatLng(37.3814115, 127.09778831249402);
-     markers[i].setPosition(newPos);
-   }
-}
-}
-function getUniqueObjectArray(array) {
-  var tempArray = [];
-  var resultArray = [];
-  for(var i = 0; i < array.length; i++) {
-    var item = array[i]
-    if(tempArray.includes(item["deviceUuid"])) {
-      continue;
-    } else {
-      resultArray.push(item);
-      tempArray.push(item["deviceUuid"]);
+
+$.ajax({
+    type: "POST", // 데이터를 전송하는 방법을 지정
+    url: "/emergency/signal", // 통신할 url을 지정
+    data: {'signalData[]': data, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션
+    dataType: "json", // 서버측에서 전송한 데이터를 어떤 형식의 데이터로서 해석할 것인가를 지정, 없으면 알아서 판단
+    // 서버측에서 전송한 Response 데이터 형식 (json)
+    success: function(response){ // 통신 성공시
+      signalArr = [];
+      temp = response.result.sort();
+      temp.sort(function(a, b) {
+            a = new Date(a.callDate);
+            b = new Date(b.callDate);
+            return a>b ? -1 : a<b ? 1 : 0;
+        });
+        temp.sort((a,b) => (a.deviceUuid > b.deviceUuid) ? 1 : ((b.deviceUuid > a.deviceUuid) ? -1 : 0));
+        var periodResultArray = getUniqueObjectArray(temp);
+       for(var i =0; i<markers.length; i++){
+           for(var j=0; j< periodResultArray; j++){
+               if(markers[i].title == periodResultArray[j].deviceUuid){
+                 console.log(markers[i]);
+                 console.log(markers[i].title);
+                 var newPos = new naver.maps.LatLng(periodResultArray[j].deviceLat, periodResultArray[j].deviceLng);
+                 markers[i].setPosition(newPos);
+               }
+           }
+        }
+    },
+    error: function(request, status, error){ // 통신 실패시 - 로그인 페이지 리다이렉트
+      signalArr = [];
     }
-  }
-  return resultArray;
+  });
 }
+
 </script>
 {% endblock %}
