--- a/hue/templates/hue/emergency.html
+++ b/hue/templates/hue/emergency.html
@@ -1,9 +1,33 @@
 {% extends 'base.html' %}
 {% block title %}- View {% endblock %}
 {% block content %}
-<div id="map" style="width:100%;height:400px;"></div>
+<style>
 
+    #map{
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    }
+</style>
+<div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <div id="map" style="width:100%;height:550px; border-color:gray"></div>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-12">
+        <p>디바이스 위치정보</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-12">
+        <p>위도:<input type="text" readonly="readonly" id="viewLat"/>경도:<input type="text" readonly="readonly" id="viewLng"/></p>
+        </div>
+    </div>
+</div>
 <script>
+var defaultUrl = "/static/images/location1.png";
+var emergencyUrl = "/static/images/map-marker1.png";
 var pos = [];
 {% for data in pos %}
 pos.push({'deviceUuid': '{{data.deviceUuid}}', 'deviceLng': '{{data.deviceLng}}', 'deviceLat': '{{data.deviceLat}}', 'deviceState': '{{data.deviceState}}', 'callDate': '{{data.callDate}}' });
@@ -17,7 +41,7 @@ pos.sort((a,b) => (a.deviceUuid > b.deviceUuid) ? 1 : ((b.deviceUuid > a.deviceU
 var finalArray = getUniqueObjectArray(pos);
 var mapOptions = {
     center: new naver.maps.LatLng(36.302726, 127.381359),
-    zoom: 8
+    zoom: 10
 };
 
 var map = new naver.maps.Map('map', mapOptions);
@@ -30,57 +54,176 @@ for (var key in finalArray) {
     var position = new naver.maps.LatLng(
         finalArray[key].deviceLat,
         finalArray[key].deviceLng);
-
+    var iconJson = new Object();
+    var infoWindow;
+    if(finalArray[key].deviceState == 1 ){
+        iconJson["url"] = emergencyUrl;
+        iconJson["size"] = new naver.maps.Size(41,41);
+        iconJson["anchor"] =  new naver.maps.Point(25,25);
+        //iconJson["origin"] = new naver.maps.Point(finalArray[key].deviceLat,  finalArray[key].deviceLng);
+        infoWindow = new naver.maps.InfoWindow({
+            content:  '<div style="width:150px;text-align:center;padding:10px; border-color:red; color:red;">경보발생! <br/>디바이스UUID: <b>"'+ finalArray[key].deviceUuid +'"</b></div>'
+        });
+        infoWindow["uuid"] = "info_"+finalArray[key].deviceUuid;
+    }else{
+        iconJson["url"] = defaultUrl;
+        iconJson["size"] = new naver.maps.Size(41,41);
+        iconJson["anchor"] =  new naver.maps.Point(25,25);
+        iconJson["origin"] = new naver.maps.Point(0,0);
+        infoWindow = new naver.maps.InfoWindow({
+            content: '<div style="width:150px;text-align:center;padding:10px;">디바이스UUID: <b>"'+ finalArray[key].deviceUuid +'"</b></div>'
+        });
+        infoWindow["uuid"] = "info_"+finalArray[key].deviceUuid;
+    }
     var marker = new naver.maps.Marker({
         map: map,
         position: position,
         title: finalArray[key].deviceUuid,
+        icon: iconJson,
         zIndex: 100
-    });
-    console.log(marker);
-    var infoWindow = new naver.maps.InfoWindow({
-        content: '<div style="width:150px;text-align:center;padding:10px;">The Letter is <b>"'+ key.substr(0, 1) +'"</b>.</div>'
     });
     marker._nmarker_id = finalArray[key].deviceUuid;
     markers.push(marker);
     infoWindows.push(infoWindow);
+    iconJson = null;
+    if(cnt == finalArray.length){
+      map.setCenter(position);
+    }
 };
 
 
-function changePos(arr){
+function changePos(){
 
 $.ajax({
     type: "POST", // 데이터를 전송하는 방법을 지정
-    url: "/emergency/signal", // 통신할 url을 지정
-    data: {'signalData[]': data, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션
+    url: "/emergency/call", // 통신할 url을 지정
+    data: {'data': {}, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션
     dataType: "json", // 서버측에서 전송한 데이터를 어떤 형식의 데이터로서 해석할 것인가를 지정, 없으면 알아서 판단
     // 서버측에서 전송한 Response 데이터 형식 (json)
     success: function(response){ // 통신 성공시
-      signalArr = [];
-      temp = response.result.sort();
-      temp.sort(function(a, b) {
-            a = new Date(a.callDate);
-            b = new Date(b.callDate);
-            return a>b ? -1 : a<b ? 1 : 0;
-        });
-        temp.sort((a,b) => (a.deviceUuid > b.deviceUuid) ? 1 : ((b.deviceUuid > a.deviceUuid) ? -1 : 0));
-        var periodResultArray = getUniqueObjectArray(temp);
+       response = eval(response);
+       var temp = new Array();
+       for(var idx=0; idx <response.length; idx++){
+         temp.push(response[idx].fields);
+       }
+       temp = temp.sort();
+       temp.sort(function(a, b) {
+                   a = new Date(a.callDate);
+                   b = new Date(b.callDate);
+                   return a>b ? -1 : a<b ? 1 : 0;
+       });
+       temp.sort((a,b) => (a.deviceUuid > b.deviceUuid) ? 1 : ((b.deviceUuid > a.deviceUuid) ? -1 : 0));
+       var periodResultArray = getUniqueObjectArray(temp);
+       var centerPos;
+       var newMarker = new Array();
+       var cloneArray = periodResultArray;
+       var removelist = new Array();
        for(var i =0; i<markers.length; i++){
-           for(var j=0; j< periodResultArray; j++){
+           for(var j=0; j< periodResultArray.length; j++){
                if(markers[i].title == periodResultArray[j].deviceUuid){
-                 console.log(markers[i]);
-                 console.log(markers[i].title);
+                 removelist.push(periodResultArray[j]);
                  var newPos = new naver.maps.LatLng(periodResultArray[j].deviceLat, periodResultArray[j].deviceLng);
-                 markers[i].setPosition(newPos);
+                 centerPos = newPos;
+                 if(periodResultArray[j].deviceState == 1){
+                   markers[i].setPosition(newPos);
+                   markers[i].setIcon({
+                     url: emergencyUrl,
+                     size: new naver.maps.Size(41,41),
+                     anchor: new naver.maps.Point(25,25)
+                   });
+                   infoWindows[i].setContent('<div style="width:150px;text-align:center;padding:10px; border-color:red; color:red;">경보발생! <br/>디바이스UUID: <b>"'+ periodResultArray[j].deviceUuid +'"</b></div>');
+
+                 }else{
+                   markers[i].setPosition(newPos);
+                   markers[i].setIcon({
+                     url: defaultUrl,
+                     size: new naver.maps.Size(41,41),
+                     anchor: new naver.maps.Point(25,25)
+                   });
+                   infoWindows[i].setContent('<div style="width:150px;text-align:center;padding:10px;">디바이스UUID: <b>"'+ periodResultArray[j].deviceUuid +'"</b></div>');
+                 }
                }
+           }// end j for
+           if((i+1) == markers.length){
+             map.setCenter(centerPos);
            }
-        }
+        }// end i for
+       newMarker = cloneArray.filter(function(val) {
+                      return removelist.indexOf(val) == -1;
+                    });
+       if(newMarker.length > 0){
+          for(var i=0; i<newMarker.length; i++){
+            var position = new naver.maps.LatLng(
+            newMarker[i].deviceLat,
+            newMarker[i].deviceLng);
+            var iconJson = new Object();
+            var infoWindow;
+            if(newMarker[i].deviceState == 1 ){
+                iconJson = new Object();
+                iconJson["url"] = emergencyUrl;
+                iconJson["size"] = new naver.maps.Size(41,41);
+                iconJson["anchor"] =  new naver.maps.Point(25,25);
+                //iconJson["origin"] = new naver.maps.Point(newMarker[i].deviceLat,  newMarker[i].deviceLng);
+                infoWindow = new naver.maps.InfoWindow({
+                    content:  '<div style="width:150px;text-align:center;padding:10px; border-color:red; color:red;">경보발생! <br/>디바이스UUID: <b>"'+ newMarker[i].deviceUuid +'"</b></div>'
+                });
+                infoWindow["uuid"] = "info_"+newMarker[i].deviceUuid;
+            }else{
+                iconJson["url"] = defaultUrl;
+                iconJson["size"] = new naver.maps.Size(41,41);
+                iconJson["anchor"] =  new naver.maps.Point(25,25);
+                iconJson["origin"] = new naver.maps.Point(0,0);
+                infoWindow = new naver.maps.InfoWindow({
+                    content: '<div style="width:150px;text-align:center;padding:10px;">디바이스UUID: <b>"'+ newMarker[i].deviceUuid +'"</b></div>'
+                });
+                infoWindow["uuid"] = "info_"+newMarker[i].deviceUuid;
+            }
+            var marker = new naver.maps.Marker({
+                map: map,
+                position: position,
+                title: newMarker[i].deviceUuid,
+                icon: iconJson,
+                zIndex: 100
+            });
+            marker._nmarker_id = newMarker[i].deviceUuid;
+            markers.push(marker);
+            naver.maps.Event.addListener(marker, 'click', getClickHandler(markers.length-1));
+
+            infoWindows.push(infoWindow);
+          }
+
+       }
     },
     error: function(request, status, error){ // 통신 실패시 - 로그인 페이지 리다이렉트
-      signalArr = [];
+
     }
   });
 }
+function uniqueArray(arrArg) {
+  return arrArg.filter(function(elem, pos,arr) {
+    return arr.indexOf(elem) == pos;
+  });
+};
 
+function getClickHandler(seq) {
+    return function(e) {
+        var marker = markers[seq],
+            infoWindow = infoWindows[seq];
+
+        if (infoWindow.getMap()) {
+            infoWindow.close();
+        } else {
+            infoWindow.open(map, marker);
+            $("#viewLat").val(marker.getPosition()._lat);
+            $("#viewLng").val(marker.getPosition()._lng);
+
+        }
+    }
+}
+
+for (var i=0, ii=markers.length; i<ii; i++) {
+    naver.maps.Event.addListener(markers[i], 'click', getClickHandler(i));
+}
+setInterval(changePos,1000*5);
 </script>
 {% endblock %}
