--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,10 @@
     width: 300px;
     margin-bottom: 10px;
     }
+    .alert {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    }
 
     .alerts .alert-red {color: #a94442; background-color: #f2dede; border-color: #ebccd1;}
 </style>
