알람 디자인 수정 및 로그인화면 수정

--- a/hue/templates/hue/emergency.html
+++ b/hue/templates/hue/emergency.html
@@ -7,6 +7,17 @@
     border-radius: 25px;
     border: 2px solid #73AD21;
     }
+
+    .alerts {
+    position: absolute;
+    z-index: 1030;
+    width: 300px;
+    margin-bottom: 10px;
+    }
+    .alert {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    }
 </style>
 <div class="container">
     <div class="row">
