누락 소스 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@ tokens = '{{ csrf_token }}';
                 <li class="nav-item"><a href="/emergency" class="nav-link">응급구조시스템</a></li>
                 <li class="nav-item"><a href="/logout" class="nav-link">로그아웃</a></li>
                 {% else %}
-                <li class="nav-item"><a href="/login" class="nav-link">로그인</a></li>
+                <!--<li class="nav-item"><a href="/login" class="nav-link">로그인</a></li>-->
                 {% endif %}
             </ul>
         </nav>
