환경정보 시스템 추가

--- a/hue/templates/registration/login.html
+++ b/hue/templates/registration/login.html
@@ -280,7 +280,7 @@ input[type=text]:placeholder {
     <form method="post">
        {% csrf_token %}
       <input type="text" id="id_username" class="fadeIn second" name="username" placeholder="아이디">
-      <input type="text" id="id_password" class="fadeIn third" name="password" placeholder="패스워드">
+      <input type="password" id="id_password" class="fadeIn third" name="password" placeholder="패스워드">
       <input type="submit" class="fadeIn fourth" value="로그인">
     </form>
 
