데이터 수정 및 중복제거

--- a/hue/templates/hue/emergency.html
+++ b/hue/templates/hue/emergency.html
@@ -20,6 +20,11 @@
     }
 </style>
 <div class="container">
+        <div class="row" style="margin-top:10px;">
+        <div class="col-xl-12">
+        <p>HUE > 응급구조시스템</p>
+        </div>
+    </div>
     <div class="row">
       <div class="col-xl-12">
         <div id="map" style="width:100%;height:550px; border-color:gray"></div>
