--- a/hue/templates/hue/navi.html
+++ b/hue/templates/hue/navi.html
@@ -474,6 +474,11 @@ function classificationMap(roomid){
 */
 </script>
 <input type="hidden" value="" id="chgInputOrder" />
+     <div class="row" style="margin-top:10px;">
+        <div class="col-xl-12">
+        <p>HUE > 이정표시스템</p>
+        </div>
+    </div>
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8" panel panel-default></div>
@@ -661,10 +666,16 @@ function updateNode() {
 
 }
 function sendSignal(data){
+  var uniquedatas = [];
+    $.each(data, function(i, el){
+        if($.inArray(el, uniquedatas) === -1) uniquedatas.push(el);
+    });
+
+
   $.ajax({
     type: "POST", // 데이터를 전송하는 방법을 지정
     url: "/navi/signal", // 통신할 url을 지정
-    data: {'signalData[]': data, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션
+    data: {'signalData[]': uniquedatas, 'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션
     dataType: "json", // 서버측에서 전송한 데이터를 어떤 형식의 데이터로서 해석할 것인가를 지정, 없으면 알아서 판단
     // 서버측에서 전송한 Response 데이터 형식 (json)
     success: function(response){ // 통신 성공시 - 동적으로 좋아요 갯수 변경, 유저 목록 변경
@@ -682,6 +693,7 @@ function sendSignal(data){
       signalArr = [];
     }
   });
+
 }
 function saveReservation(data){
   $.ajax({
