--- a/hue/templates/hue/temphumpm.html
+++ b/hue/templates/hue/temphumpm.html
@@ -20,6 +20,11 @@
     }
 </style>
 <div class="container">
+     <div class="row" style="margin-top:10px;">
+        <div class="col-xl-12">
+        <p>HUE > 환경정보시스템</p>
+        </div>
+    </div>
     <div class="row">
       <div class="col-xl-12">
         <div id="map" style="width:100%;height:550px; border-color:gray"></div>
@@ -48,7 +53,7 @@ temp.sort(function(a, b) {
 temp.sort((a,b) => (a.deviceUuid > b.deviceUuid) ? 1 : ((b.deviceUuid > a.deviceUuid) ? -1 : 0));
 var finalArray = getUniqueObjectArray(temp);
 var mapOptions = {
-    center: new naver.maps.LatLng(36.299276, 127.489287),
+    center: new naver.maps.LatLng(36.326105, 127.338588),
     zoom: 9
 };
 
